# pac-plus

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  default.profraw  main.cpp  run-clang-tidy.py  vcpkg.json
.github/workflows/: ci.yml  cmake-multi-platform.yml
assets/map/: map.tmx  tileset.tsx
include/: SceneTest.h  Square.h  lib.h  pac-plus.h  scene-test.h  square.h
include/game/: Component.h  ComponentKeyboardMovement.h  ComponentSprite.h  ComponentTransform.h  Core.h  FPS.h  Font.h  Game.h  GameObject.h  LTexture.h  LTimer.h  Object.h  ObjectCollection.h  Resource.h  ResourceAllocator.h  Scene.h  SceneStateMachine.h  Sprite.h  animation.h  component-animation.h  component-keyboard-movement.h  component-sprite.h  component-transform.h  component.h  core.h  font.h  fps.h  game-object.h  game.h  object-collection.h  object.h  resource-allocator.h  resource.h  scene-state-machine.h  scene.h  sprite.h  texture.h  tile-map-parser.h  tile.h  timer.h  (+3 more)
src/: ComponentKeyboardMovement.cpp  ComponentSprite.cpp  ComponentTransform.cpp  FPS.cpp  Font.cpp  Game.cpp  GameObject.cpp  LTexture.cpp  LTimer.cpp  Object.cpp  ObjectCollection.cpp  SceneStateMachine.cpp  SceneTest.cpp  Sprite.cpp  Square.cpp  component-keyboard-movement.cpp  component-sprite.cpp  component-transform.cpp  fps.cpp  game.cpp  lib.cpp  main.cpp  object-collection.cpp  object.cpp  pac-plus.cpp  scene-state-machine.cpp  scene-test.cpp  sprite.cpp  square.cpp  texture.cpp  timer.cpp
src/game/: animation.cpp  component-animation.cpp  component-keyboard-movement.cpp  component-sprite.cpp  font.cpp  fps.cpp  game.cpp  object-collection.cpp  object.cpp  scene-state-machine.cpp  sprite.cpp  texture.cpp  tile-map-parser.cpp  window.cpp
test/: ObjectCollectionTest.cpp  hello_test.cpp
